# ShioajiCpp

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test.yml
cmake/: StandardSettings.cmake
cmakeliststxt/: vcpkg_x64-linux.txt  vcpkg_x64-osx.txt  vcpkg_x64-windows.txt
include/: shioaji.h
libs/solace/Darwin/solclient-7.13.0.4/Intro/: HelloWorldWebPub.c  README  README.macOS
libs/solace/Darwin/solclient-7.13.0.4/Intro/Intro.xcodeproj/: project.pbxproj
libs/solace/Darwin/solclient-7.13.0.4/ex/: Makefile  README  README.macOS  RRDirectReplier.c  cutThroughFlowToQueue.c  perfADPub.c  syncCacheRequest.c
libs/solace/Darwin/solclient-7.13.0.4/ex/osx/samples.xcodeproj/: project.pbxproj
libs/solace/Darwin/solclient-7.13.0.4/lib/: libsolclient.so.1
libs/solace/Darwin/solclient-7.13.0.4/lib/dynamic_options/: libsolclient.so.1  libsolclient_dynamicJudy.1.7.13.0.4.dylib
libs/solace/Linux/solclient-7.13.0.4/ex/: messageReplay.c  messageSelectorsOnQueue.c  messageTTLAndDeadMessageQueue.c  os.h  perfTest.c  queueProvision.c  replication.c  secureSession.c  simpleFlowToTopic.c  transactions.c
libs/solace/Linux/solclient-7.13.0.4/lib/: libsolclient.so.1
libs/solace/Windows/solclient-7.13.0.4/Intro/: HelloWorldPub.c  HelloWorldQueuePub.c
libs/solace/Windows/solclient-7.13.0.4/Intro/vs2008/: c_api_Introduction.sln  solclient.vsprops
libs/solace/Windows/solclient-7.13.0.4/Intro/vs2008/HelloWorldQueueSub/: HelloWorldQueueSub.vcproj
libs/solace/Windows/solclient-7.13.0.4/Intro/vs2008/HelloWorldWebPub/: HelloWorldWebPub.vcproj
libs/solace/Windows/solclient-7.13.0.4/Intro/vs2008/HelloWorldWebSub/: HelloWorldWebSub.vcproj
libs/solace/Windows/solclient-7.13.0.4/Intro/vs2010/: c_api_Introduction.sln
libs/solace/Windows/solclient-7.13.0.4/Intro/vs2010/HelloWorldQueuePub/: HelloWorldQueuePub.vcxproj
libs/solace/Windows/solclient-7.13.0.4/Intro/vs2010/HelloWorldSub/: HelloWorldSub.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/: README.txt  RRDirectRequester.c  activeFlowIndication.c  noLocalPubSub.c  redirectLogs.c  sdtPubSubMsgDep.c  topicDispatch.c
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/: c_sdk_examples.sln  solclient.vsprops
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/RRDirectRequester/: RRDirectRequester.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/RRGuaranteedRequester/: RRGuaranteedRequester.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/activeFlowIndication/: activeFlowIndication.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/adPubAck/: adPubAck.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/asyncCacheRequest/: asyncCacheRequest.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/messageReplay/: messageReplay.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/noLocalPubSub/: noLocalPubSub.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/replication/: replication.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/sdtPubSubMsgDep/: sdtPubSubMsgDep.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/sdtPubSubMsgIndep/: sdtPubSubMsgIndep.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/secureSession/: secureSession.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/simpleBrowserFlow/: simpleBrowserFlow.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/simpleFlowToTopic/: simpleFlowToTopic.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2008/topicDispatch/: topicDispatch.vcproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/: solclient.props
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/RRDirectReplier/: RRDirectReplier.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/RRDirectRequester/: RRDirectRequester.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/RRGuaranteedReplier/: RRGuaranteedReplier.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/RRGuaranteedRequester/: RRGuaranteedRequester.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/asyncCacheRequest/: asyncCacheRequest.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/cutThroughFlowToQueue/: cutThroughFlowToQueue.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/directPubSub/: directPubSub.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/eventMonitor/: eventMonitor.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/messageReplay/: messageReplay.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/messageSelectorsOnQueue/: messageSelectorsOnQueue.vcxproj
libs/solace/Windows/solclient-7.13.0.4/ex/vs2010/messageTTLAndDeadMessageQueue/: messageTTLAndDeadMessageQueue.vcxproj
libs/solace/Windows/solclient-7.13.0.4/lib/: licenses.txt
libs/solace/Windows/solclient-7.13.0.4/lib/Win32/: libsolclient.lib  libsolclient_d.lib
libs/solace/include/solclient-7.13.0.4/solclient/: solClient.h
libs/solace/solclient_Linux26-x86_64_opt_7.13.0.4/solclient-7.13.0.4/Intro/: HelloWorldSub.c
libs/solace/solclient_Linux26-x86_64_opt_7.13.0.4/solclient-7.13.0.4/ex/: README.unix  RRGuaranteedRequester.c  RRcommon.h  asyncCacheRequest.c  common.h  flowControlQueue.c  os.c  sdtPubSubMsgIndep.c  sempGetOverMb.c  simpleBrowserFlow.c  subscribeOnBehalfOfClient.c
libs/solace/solclient_Win_7.13.0.4/solclient-7.13.0.4/Intro/: HelloWorldQueueSub.c  HelloWorldWebSub.c  README.txt
libs/solace/solclient_Win_7.13.0.4/solclient-7.13.0.4/ex/: RRGuaranteedReplier.c  adPubAck.c  common.c  directPubSub.c  eventMonitor.c  perfADSub.c  simpleFlowToQueue.c  topicToQueueMapping.c
libs/solace/solclient_Win_7.13.0.4/solclient-7.13.0.4/ex/vs2010/: c_sdk_examples.sln
libs/solace/solclient_Win_7.13.0.4/solclient-7.13.0.4/lib/Win64/: libsolclient.lib  libsolclient_d.lib
src/: CMakeLists.txt  account.h  contracts.h  shioaji_impl.cpp  shioaji_impl.h
src/core/: libsolclient.h  session.cpp  session.h  sol.cpp  sol.h  solmsg.cpp  solmsg.h  spdlevel.h
tests/: CMakeLists.txt  test_shioaji.cpp  test_sol.cpp
tests/test_core/: CMakeLists.txt  test_session.cpp  test_sol.cpp  test_solmsg.cpp
(+95 files in other folders)
